--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.3.1",
+    "i18next": "^21.8.14",
+    "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
     "react-hot-toast": "^2.2.0",
+    "react-i18next": "^11.18.1",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
