--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,9 +1,9 @@
 name: My Actions
 on:
   push:
-    branches: [ master ]
+    branches: [ prod ]
   pull_request:
-    branches: [ master ]
+    branches: [ prod ]
 jobs:
   build:
     name: Build and deploy to web server
