--- a/.github/workflows/stage.yml
+++ b/.github/workflows/stage.yml
@@ -2,8 +2,8 @@ name: My Actions
 on:
   push:
     branches: [ stage ]
-  pull_request:
-    branches: [ stage ]
+#   pull_request:
+#     branches: [ stage ]
 jobs:
   build:
     name: Build and deploy to web server
