--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -2,8 +2,8 @@ name: My Actions
 on:
   push:
     branches: [ prod ]
-  pull_request:
-    branches: [ prod ]
+#   pull_request:
+#     branches: [ prod ]
 jobs:
   build:
     name: Build and deploy to web server
@@ -13,7 +13,7 @@ jobs:
       REACT_APP_URL: ${{secrets.REACT_APP_URL}}
     steps:
       - uses: actions/checkout@v3
-      - run: sudo apt update
+#       - run: sudo apt update
       - run: node --version
       - run: npm --version
       - run: yarn --version
